EvalTestConfim: Fix spacing in buttons

--- a/src/styles/eval/EvalTestConfim.css
+++ b/src/styles/eval/EvalTestConfim.css
@@ -29,4 +29,5 @@
   justify-content: center;
   align-items: center;
   width: 100%;
+  gap: 10px;
 }
